# rminimax

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  ratapprox.cpp
rminimax/: bary.h  cheby.h  diffcorr.h  fpminimax.h  minimax.h  plotting.h  shuntingyard.h  tokenizer.h  tokenutils.h
src/: CMakeLists.txt  bary.cpp  cheby.cpp  diffcorr.cpp  fpminimax.cpp  minimax.cpp  plotting.cpp  shuntingyard.cpp  tokenizer.cpp  tokenutils.cpp
